--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="/main.5422767c005ddea86355.js"></script></body>
+  <script type="text/javascript" src="/webpack-demo/runtime.765b152b6fc5fa295c9c.js"></script><script type="text/javascript" src="/webpack-demo/vendors.8994f9c6e2ad291201c0.js"></script><script type="text/javascript" src="/webpack-demo/main.92464abf4cb20d0c4437.js"></script></body>
 </html>
