--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="react-starter/runtime.0c828ae296e5c55a4734.js"></script><script type="text/javascript" src="react-starter/vendors.8994f9c6e2ad291201c0.js"></script><script type="text/javascript" src="react-starter/main.92464abf4cb20d0c4437.js"></script></body>
+  <script type="text/javascript" src="/runtime.95680dab64e53ddf3c64.js"></script><script type="text/javascript" src="/vendors.8994f9c6e2ad291201c0.js"></script><script type="text/javascript" src="/main.92464abf4cb20d0c4437.js"></script></body>
 </html>
