--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="https://ruijadom.github.io/react-starter/runtime.d094ba55289dd778be5b.js"></script><script type="text/javascript" src="https://ruijadom.github.io/react-starter/vendors.8994f9c6e2ad291201c0.js"></script><script type="text/javascript" src="https://ruijadom.github.io/react-starter/main.5824780956e3c5b6a7c9.js"></script></body>
+  <script type="text/javascript" src="/runtime.95680dab64e53ddf3c64.js"></script><script type="text/javascript" src="/vendors.8994f9c6e2ad291201c0.js"></script><script type="text/javascript" src="/main.171479e58b2a396780e0.js"></script></body>
 </html>
