--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="https://ruijadom.github.io/react-starter/runtime.d094ba55289dd778be5b.js"></script><script type="text/javascript" src="https://ruijadom.github.io/react-starter/vendors.8994f9c6e2ad291201c0.js"></script><script type="text/javascript" src="https://ruijadom.github.io/react-starter/main.1807c92b9b6285b778f9.js"></script></body>
+  <script type="text/javascript" src="runtime.97efc1859cc31fed4f83.js"></script><script type="text/javascript" src="vendors.8994f9c6e2ad291201c0.js"></script><script type="text/javascript" src="main.1807c92b9b6285b778f9.js"></script></body>
 </html>
