--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
     <title>React Starter</title>
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="runtime.97efc1859cc31fed4f83.js"></script><script type="text/javascript" src="vendors.8994f9c6e2ad291201c0.js"></script><script type="text/javascript" src="main.d0238f7ef54ad844aade.js"></script></body>
+  <script type="text/javascript" src="runtime.97efc1859cc31fed4f83.js"></script><script type="text/javascript" src="vendors.f09ab2538c7080dca8c0.js"></script><script type="text/javascript" src="main.9a05979d15b8595e0239.js"></script></body>
 </html>
